# emtion-detection

./: .gitattributes  .gitignore  1188976.json  evaluate_model_quick.py  main.py  pyproject.toml  requirements.txt  run_mers.bat  run_train.bat  simple_demo.py  validate_audit.py  validate_visual.py  verify_data.py  verify_fix.py
assets/database/: mers.db
assets/models/: audio_mlp.pkl  audio_model.pth  audio_resnet18.pth  audio_scaler.pkl  label_encoder.pkl  mfcc_mean.npy  mfcc_std.npy  model_metadata.pkl  visual_efficientnet.pth  visual_model.pth
assets/web/: history.html
backend/config/: config.json  settings.py
docs/: AUDIT_REPORT.md  BUILD_APK.md  FACE_VISUALIZATION.md  MIGRATION_PLAN.md  PIPELINE_AND_INTEGRATION.md  README.md  README_FLUTTER.md  RESTRUCTURE_PLAN.md  TESTING_PROTOCOLS.md  VISUAL_DATASET_ANALYSIS.md  VISUAL_MIGRATION_DOCS.md  description.md  project_source_code.txt  project_whitepaper.md
evaluation_results/: classification_report.txt
frontend/mers_app/: pubspec.yaml
frontend/mobile/: README.md  pubspec.yaml
mers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: download_dataset.py  generate_synthetic_data.py  train_audio_cnn.py  train_audio_model.py  train_audio_resnet.py
scripts/benchmark/: benchmark_current_logic.py
scripts/client/: client_pc.py
scripts/evaluation/: evaluate_model.py
scripts/pipeline/: run_pipeline.ps1
scripts/setup/: check_gpu_env.py
tests/: test_api.py  test_fusion.py  test_visual_engine.py  test_visual_logic_new.py  test_visual_rules.py  test_visual_rules_comprehensive.py
(+46 files in other folders)
